# userverse

./: .env.testing  .gitignore  Dockerfile  PR_DESCRIPTION.md  README.md  output.txt  pyproject.toml  sample-config.json  test_output.txt
.github/workflows/: build-and-test.yml  release.yml
alembic/: env.py
alembic/versions/: 4f9d2f8f6c13_migrate_user_and_company_ids_to_uuid.py  84fe79d842e9_create_users_table.py  9552b9fc884a_add_new_table.py  9e858906b135_poc_models.py  c539ec0c41d5_poc_models.py  ed9ebb68b121_poc_models.py
app/: configs.py  exceptions.py  main.py
app/api/dependencies/: common.py
app/api/middleware/: profiling.py
app/api/security/: jwt.py
app/database/: association_user_company.py  base_model.py  company.py  role.py  session_manager.py  user.py
app/dependencies/: common.py
app/email/: sender.py
app/email/templates/: base.html  company_invite.html  reset_user_password.html  user_notification.html  user_registration.html
app/jobs/: __init__.py  bus.py  composer.py  handlers.py  models.py  services.py  store.py
app/logic/: mailer.py
app/logic/company/: company.py  role.py  user.py
app/logic/user/: basic_auth.py  password.py  profile.py  user.py  verification.py
app/middleware/: logging.py  profiling.py
app/models/: generic_pagination.py  phone_number.py  response_messages.py  security_messages.py  tags.py
app/models/company/: address.py  company.py  response_messages.py  roles.py  user.py
app/models/configs/: __init__.py  cors.py  database.py  email.py  jwt.py  runtime.py
app/models/user/: account_status.py  password.py  response_messages.py  user.py
app/repository/: base.py  company.py  company_role.py  company_user.py  user.py  user_password.py
app/repository/database/: __init__.py  base_model.py  session_manager.py
app/routers/company/: company.py  roles.py  users.py
app/routers/user/: basic_auth.py  password.py  user.py  user_basic_auth_routes.py  user_password_routes.py  user_profile_routes.py  user_verification_routes.py  verification.py
app/security/: basic_auth.py  jwt.py
app/services/: mailer.py
app/services/company/: company.py  role.py  user.py
app/services/user/: basic_auth.py  password.py  profile.py  verification.py
app/utils/: app_error.py  common_route_dependecies.py  date_converter.py  env.py  hash_password.py  logging.py  parsing.py  project_metadata.py  rate_limiter.py  shared_context.py
app/utils/config/: cors.py  database.py  email_config.py  environment.py  loader.py
app/utils/email/: renderer.py  sender.py
coverage_reports/: coverage.xml
docs/: configuration.md  faq.md  github-workflows.md  index.md  testing.md
scripts/: env.py  run_http_tests.sh
tests/: README.md
tests/api/http/: conftest.py  test_exceptions.py  test_main.py  test_pagination_regressions.py  test_profiling.py
tests/api/middleware/: test_otel.py
tests/api/security/: test_basic.py  (+1 more)
tests/database/: conftest.py  test_a_user.py  test_association_extra.py  test_b_company.py  test_base_model_extra.py  test_c_role.py  test_company_extra.py  test_e_association.py  test_role_extra.py  test_session_manager.py
tests/http/: conftest.py  test_main.py  test_main_cli.py  test_pagination_regressions.py  test_profiling.py
tests/jobs/: test_bus.py  test_handlers.py
tests/middleware/: test_otel.py
tests/security/: test_basic.py  test_jwt.py
tests/utils/: test_app_error.py  test_date_converter.py  test_hash_password.py  test_lightweight_coverage.py  test_logging.py  test_rate_limiter.py  test_shared_context.py
(+53 files in other folders)
