[project]
name = "userverse"
version = "0.6.16"
description = "Userverse is an open-source platform designed to make managing users, organizations, and their relationships simple and efficient."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "alembic>=1.15.2",
    "beautifulsoup4>=4.13.4",
    "black>=25.1.0",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "mkdocs>=1.6.1",
    "opentelemetry-exporter-otlp>=1.32.1",
    "opentelemetry-instrumentation-fastapi>=0.53b1",
    "opentelemetry-instrumentation-requests>=0.53b1",
    "opentelemetry-sdk>=1.32.1",
    "passlib>=1.7.4",
    "bcrypt>=4.2.0",
    "prometheus-client>=0.22.1",
    "psycopg2-binary==2.9.10",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "sqlalchemy>=2.0.40",
    "sqlalchemy-utils>=0.41.2",
    "click>=8.2.1",
    "phonenumbers>=9.0.19",
    "yappi>=1.6.0",
    "pymysql>=1.1.2",
    "mysqlclient>=2.2.8",
]

[project.urls]
Repository = "https://github.com/SoftwareVerse/userverse.git"
Documentation = "https://userverse.softwareverse.co.za/docs"


[tool.pytest.ini_options]
# Silence DeprecationWarning from passlib importing Python's 'crypt' (Py3.13 removal)
filterwarnings = [
    "ignore::DeprecationWarning:passlib.utils",
]



[dependency-groups]
dev = [
    "memory-profiler>=0.61.0",
    "memray>=1.19.1",
    "pytest>=9.0.2",
    "pytest-repeat>=0.9.4",
]
