[project]
name = "userverse"
version = "0.6.31"
description = "Userverse is an open-source platform designed to make managing users, organizations, and their relationships simple and efficient."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "alembic>=1.15.2",
    "beautifulsoup4>=4.13.4",
    "black>=26.3.1",
    "fastapi[standard]>=0.139.2",
    "httpx>=0.28.1",
    "idna>=3.15",
    "mako>=1.3.12",
    "mkdocs>=1.6.1",
    "opentelemetry-exporter-otlp>=1.32.1",
    "opentelemetry-instrumentation-fastapi>=0.53b1",
    "opentelemetry-instrumentation-requests>=0.53b1",
    "opentelemetry-sdk>=1.32.1",
    "passlib>=1.7.4",
    "bcrypt>=4.2.0",
    "prometheus-client>=0.22.1",
    "psycopg2-binary==2.9.10",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "pytest>=9.0.3",
    "pytest-cov>=6.1.1",
    "requests>=2.33.0",
    "sqlalchemy>=2.0.40",
    "sqlalchemy-utils>=0.41.2",
    "soupsieve>=2.8.4",
    "click>=8.2.1",
    "phonenumbers>=9.0.19",
    "starlette>=1.3.0",
    "urllib3>=2.7.0",
    "yappi>=1.6.0",
    "pymysql>=1.1.2",
    "mysqlclient>=2.2.8",
]

[project.urls]
Repository = "https://github.com/SoftwareVerse/userverse.git"
Documentation = "https://userverse.softwareverse.co.za/docs"


[tool.pytest.ini_options]
pythonpath = ["."]
# Silence DeprecationWarning from passlib importing Python's 'crypt' (Py3.13 removal)
filterwarnings = [
    "ignore::DeprecationWarning:passlib.utils",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/api/middleware/logging.py",
    "app/api/middleware/otel.py",
    "app/api/middleware/profiling.py",
    "app/email/sender.py",
    "app/models/configs/*",
]

[tool.coverage.report]
fail_under = 95
show_missing = true



[dependency-groups]
dev = [
    "memory-profiler>=0.61.0",
    "memray>=1.19.2",
    "pytest>=9.0.3",
    "pytest-repeat>=0.9.4",
]
